# cs315-sorting-algorithms

./: .gitignore  CMakeLists.txt  README.md  insertionsorter.cpp  insertionsorter.h  main.cpp  mergesorter.cpp  mergesorter.h  pokemondata.cpp  pokemondata.h  pokemondataitem.cpp  pokemondataitem.h  pokemonsort.cpp  quicksorter.cpp  quicksorter.h  sorter.cpp  sorter.h
data/: pokemonRandomLarge.csv  pokemonRandomMedium.csv  pokemonRandomSmall.csv  pokemonRandomTiny.csv  pokemonReverseSortedLarge.csv  pokemonReverseSortedMedium.csv  pokemonReverseSortedSmall.csv  pokemonSortedLarge.csv  pokemonSortedMedium.csv  pokemonSortedSmall.csv
